# makepad-chart

./: .gitignore  Cargo.toml  README.md
examples/: chart_zoo.rs
src/: lib.rs
src/animation/: animator.rs  easing.rs  mod.rs
src/chart/: bar_chart.rs  bubble_chart.rs  chord_chart.rs  combo_chart.rs  horizontal_bar_chart.rs  line_chart.rs  mod.rs  pie_chart.rs  polar_area_chart.rs  radar_chart.rs  scatter_chart.rs
src/component/: axis.rs  grid.rs  legend.rs  mod.rs  title.rs  tooltip.rs
src/coord/: cartesian.rs  mod.rs  polar.rs
src/core/: colors.rs  data.rs  mod.rs  options.rs  types.rs
src/element/: arc.rs  bar.rs  grid.rs  line.rs  mod.rs  point.rs  triangle.rs
src/interaction/: hit_test.rs  mod.rs
src/scale/: category.rs  linear.rs  mod.rs  traits.rs  utils.rs
